[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/PlayerTurnUI.gd" type="Script" id=1]
[ext_resource path="res://Sprites/ringtimer.png" type="Texture" id=2]
[ext_resource path="res://Sprites/RESPOSTA.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Game/Turnos.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Game/Tabuleiro.gd" type="Script" id=5]
[ext_resource path="res://interface/fonts/montserrat_eb_64.tres" type="DynamicFont" id=6]
[ext_resource path="res://Sprites/BOLO DE CARTAS.png" type="Texture" id=7]
[ext_resource path="res://Fonts/OpenSans-Regular_0.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Sprites/CARTA.png" type="Texture" id=10]
[ext_resource path="res://Sprites/mockup.jpeg" type="Texture" id=12]
[ext_resource path="res://Sprites/BG.png" type="Texture" id=13]
[ext_resource path="res://Sprites/LINHA VITORIA.png" type="Texture" id=15]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/OpenSans-Regular_0.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 38
font_data = ExtResource( 8 )

[node name="MainScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabuleiro" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Baralho" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mockup" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayerContainer" type="VBoxContainer" parent="Background"]
anchor_right = 0.095
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deck" type="TextureRect" parent="Background"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -412.0
margin_top = -355.0
margin_right = -23.0
margin_bottom = 259.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HintsPanel" type="TextureRect" parent="Background"]
anchor_left = 0.912
anchor_top = 0.056
anchor_right = 1.0
anchor_bottom = 0.767
margin_left = -420.04
margin_top = -0.480003
margin_right = -32.0
margin_bottom = -27.3601
texture = ExtResource( 10 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Background/HintsPanel"]
anchor_left = 0.061
anchor_top = 0.142
anchor_right = 0.946
anchor_bottom = 0.941
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PinsPanel" type="Panel" parent="Background"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.173
anchor_top = 0.761
anchor_right = 0.925
anchor_bottom = 1.0
margin_left = -0.160004
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pins" type="TextureRect" parent="Background/PinsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerPanel" type="TextureRect" parent="Background"]
visible = false
anchor_left = 0.119
anchor_top = 0.07
anchor_right = 0.454
anchor_bottom = 0.69
margin_left = -0.480011
margin_top = 0.400002
margin_right = -0.680054
margin_bottom = -0.200073
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer" type="LineEdit" parent="Background/AnswerPanel"]
anchor_left = 0.059
anchor_top = 0.338
anchor_right = 0.967
anchor_bottom = 0.831
margin_left = 0.0629959
margin_top = -0.122025
margin_right = 0.218933
margin_bottom = 0.0609741
custom_fonts/font = ExtResource( 6 )
placeholder_text = "Digite a resposta aqui"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TipText" type="Label" parent="Background"]
anchor_left = 0.114
anchor_top = 0.607
anchor_right = 0.428
anchor_bottom = 0.774
margin_left = -75.08
margin_top = 75.44
margin_right = 367.84
margin_bottom = 82.08
custom_colors/font_color = Color( 0.32549, 0.32549, 0.32549, 1 )
custom_fonts/font = SubResource( 2 )
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="Background"]
visible = false
anchor_left = 0.332
anchor_right = 0.332
margin_left = 43.5599
margin_top = 12.0
margin_right = 496.56
margin_bottom = 465.0
rect_scale = Vector2( 0.5, 0.5 )
max_value = 60.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 4
tint_over = Color( 1, 0, 0, 1 )
tint_progress = Color( 0, 1, 0.368627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Background"]
visible = false
margin_left = 467.0
margin_top = 831.0
margin_right = 614.0
margin_bottom = 888.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
text = "Enviar Resposta"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultsScreen" type="Panel" parent="Background"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -318.5
margin_top = -484.0
margin_right = 318.5
margin_bottom = 484.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/ResultsScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.0
margin_top = -36.5
margin_right = 139.0
margin_bottom = 36.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Cabo"
align = 1
valign = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="TimerTurn" type="Timer" parent="."]
wait_time = 3.0

[node name="HTTPRequest3" type="HTTPRequest" parent="."]

[node name="HTTPRequest4" type="HTTPRequest" parent="."]

[node name="HTTPRequest5" type="HTTPRequest" parent="."]

[node name="HTTPRequest6" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Background/Button" to="Background" method="_on_Button_Send_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="Tabuleiro" method="_on_HTTPRequest2_request_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerTurn" to="." method="_on_TimerTurn_timeout"]
[connection signal="request_completed" from="HTTPRequest3" to="." method="_on_HTTPRequest3_request_completed"]
[connection signal="request_completed" from="HTTPRequest4" to="." method="_on_HTTPRequest4_request_completed"]
[connection signal="request_completed" from="HTTPRequest5" to="." method="_on_HTTPRequest5_request_completed"]
[connection signal="request_completed" from="HTTPRequest6" to="." method="_on_HTTPRequest6_request_completed"]
